--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,21 +9,11 @@ const pageTitle = "IJT Garden";
     <h1>My Garden</h1>
     <span class="badge">Software Developer</span>
     <h2>About</h2>
-    <p>
-        Praesent malesuada mi nisi, quis tempus magna venenatis ut.
-        Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
-        mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
-        Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
-        pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
-        porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
-        libero justo gravida nibh, non ultricies justo purus ultrices est.
-    </p>
-    <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-    </p>
+    <ul class="no-bullets">
+        <li style="margin-top:10px">Software Developer @ <a style="text-decoration: none" href="https://www.bytron.aero/" target="_blank">Bytron Aviation Systems</a></li>
+        <li style="margin-top:10px">Currently building <a href="we-workout.vercel.app" target="_blank">WeWorkout</a></li>
+        <li style="margin-top:10px;margin-bottom:10px">Interested in Computer Vision for sports and Data Analytics</li>
+    </ul>
     <div class="center">
         <a href="/works/">
             <button class="btn">My portfolio</button>
@@ -32,17 +22,14 @@ const pageTitle = "IJT Garden";
     <h2>Skills</h2>
     <div class="skills center">
         <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="CSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="HTML" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="React" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg"/>
+        <img class="skills__img" width="46" height="46" alt="PHP" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg"/>
+        <img class="skills__img" width="46" height="46" alt="Symfony" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/symfony/symfony-original-wordmark.svg"/>
     </div>
     <h2>Interests</h2>
     <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
+        I've always loved playing sports, and go gym 3 times a week, play american football twice a week and football once a week. <br><br>
+        I thorougly enjoy it and in my future i very much want to use my programming skills with sports, maybe even record a few videos, and write a few blogs. <br><br>
+        I suck at these sports though dont get it twisted lol
     </p>
 </Layout>
-
