--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
 /* Global styles */
 :root {
-    --background: #1e1e2e; 
-    --background-light: #fdebf3;
-    --button: #78c2ad;
-    --text: #fdebf3;
-    --text-light: #1e1e2e; 
+    --background: #2F4E07; 
+    --background-light: #A4C775;
+    --button: #0C1302;
+    --text: #A4C775;
+    --text-light: #2F4E07; 
     --text-link: #78c2ad;
     --underline: #375a7f;
     --header: 'Pacifico', cursive;
@@ -283,6 +283,12 @@ footer {
     text-decoration: none;
 }
 
+ul.no-bullets {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+}
+
 /* Theme Icon */
 html.light {
     background-color: var(--background-light);
@@ -375,4 +381,3 @@ html.light {
         width: 350px;
     }
 }
-
